--- a/index.html
+++ b/index.html
@@ -33,32 +33,103 @@
     <div class="question">
       <p>1. When faced with a challenge at work, you say:</p>
       <div class="options">
-        <label><input type="radio" name="q1" value="5"> This is too hard! Let someone else handle it.</label>
-        <label><input type="radio" name="q1" value="10"> Wow, this is challenging</label>
-        <label><input type="radio" name="q1" value="15"> Autumn</label>
-        <label><input type="radio" name="q1" value="20"> Winter</label>
+        <label><input type="radio" name="q1" value="1"> This is too hard! Let someone else handle it.</label>
+        <label><input type="radio" name="q1" value="2"> Wow, this is challenging, but I’ll keep trying to resolve this on my own.</label>
+        <label><input type="radio" name="q1" value="3"> It seems my method is not working, so I’ll seek help!</label>
+        <label><input type="radio" name="q1" value="4"> This is new, but I’m confident my team and I can take this on!</label>
       </div>
     </div>
 
     <div class="question">
-      <p>2. Pick a pet:</p>
+      <p>2. How do you feel when being critiqued at work?</p>
       <div class="options">
-        <label><input type="radio" name="q2" value="10"> Dog</label>
-        <label><input type="radio" name="q2" value="15"> Cat</label>
-        <label><input type="radio" name="q2" value="5"> Bird</label>
-        <label><input type="radio" name="q2" value="20"> Fish</label>
+        <label><input type="radio" name="q2" value="1"> I'll get my revenge soon enough. Watch your back.</label>
+        <label><input type="radio" name="q2" value="2"> I will try to improve but this doesn't mean you're right.</label>
+        <label><input type="radio" name="q2" value="3"> Ah, now I know what I can improve on. Let's do this.</label>
+        <label><input type="radio" name="q2" value="4"> Love it when my peers take the time to help me do my best work!</label>
       </div>
     </div>
 
     <div class="question">
-      <p>3. Choose a drink:</p>
+      <p>3. What do you believe about talent and abilities?</p>
       <div class="options">
-        <label><input type="radio" name="q3" value="5"> Water</label>
-        <label><input type="radio" name="q3" value="10"> Juice</label>
-        <label><input type="radio" name="q3" value="15"> Soda</label>
-        <label><input type="radio" name="q3" value="20"> Coffee</label>
+        <label><input type="radio" name="q3" value="1"> Everyone has talent, no point in working to improve a skill I don't have.</label>
+        <label><input type="radio" name="q3" value="2"> Well, others may have talent, but I work harder.</label>
+        <label><input type="radio" name="q3" value="3"> There's always room for improvement!</label>
+        <label><input type="radio" name="q3" value="4"> You can master any ability with enough time, effort, and resources!</label>
+      </div>
+    </div> 
+
+    <div class="question">
+      <p>4. How do you view career setbacks?</p>
+      <div class="options">
+        <label><input type="radio" name="q4" value="1"> Just my luck to always be in bad situations.</label>
+        <label><input type="radio" name="q4" value="2"> I know I have flaws but it's okay just got to live with it.</label>
+        <label><input type="radio" name="q4" value="3"> I need to find ways to overcome them!</label>
+        <label><input type="radio" name="q4" value="4"> What setbacks? They're just stages to the next level.</label>
       </div>
     </div>
+
+    <div class="question">
+      <p>5. When faced with a difficult task, you tend to:</p>
+      <div class="options">
+        <label><input type="radio" name="q5" value="1"> Avoid it or try to push it to someone else to do it.</label>
+        <label><input type="radio" name="q5" value="2"> I'll take my own sweet time to do it.</label>
+        <label><input type="radio" name="q5" value="3"> Tackle it bit by bit and voila! It's done.</label>
+        <label><input type="radio" name="q5" value="4"> Get excited, because doing difficult tasks is the best way to grow!</label>
+      </div>
+    </div>
+
+    <div class="question">
+      <p>6. How do you perceive the success of others?</p>
+      <div class="options">
+        <label><input type="radio" name="q6" value="1"> Oh well, some people are very good at tooting their own horns!</label>
+        <label><input type="radio" name="q6" value="2"> I hope I can be as successful as them someday.</label>
+        <label><input type="radio" name="q6" value="3"> They truly deserve it for all the hard work they've put in!</label>
+        <label><input type="radio" name="q6" value="4"> They inspire me. Time to learn from them!</label>
+      </div>
+    </div>
+
+    <div class="question">
+      <p>7. When learning a new skill, you believe:</p>
+      <div class="options">
+        <label><input type="radio" name="q7" value="1"> I already have my skillset. I don't need another skill.</label>
+        <label><input type="radio" name="q7" value="2"> I'll try to learn it, but I can't guarantee that I'll be good at it okay?</label>
+        <label><input type="radio" name="q7" value="3"> It looks tough, but I can certainly learn it with time and practice.</label>
+        <label><input type="radio" name="q7" value="4"> Great! Time to level up! Another skill soon to be in the bag.</label>
+      </div>
+    </div>
+
+    <div class="question">
+      <p>8. How do you handle failures?</p>
+      <div class="options">
+        <label><input type="radio" name="q8" value="1"> I hope no one knows about them, so embarrassing!</label>
+        <label><input type="radio" name="q8" value="2"> I hate to fail, but let's try again.</label>
+        <label><input type="radio" name="q8" value="3"> I must have done something wrong, let's try a new approach!</label>
+        <label><input type="radio" name="q8" value="4"> They're not failures but more like reminders to up my efforts!</label>
+      </div>
+    </div>
+
+    <div class="question">
+      <p>9. When receiving praise, you tend to think:</p>
+      <div class="options">
+        <label><input type="radio" name="q9" value="1"> Are you for real? You need a favour from me, right?</label>
+        <label><input type="radio" name="q9" value="2"> Maybe, I did well this time, but don't expect this all the time.</label>
+        <label><input type="radio" name="q9" value="3"> Let's try to keep up this momentum!</label>
+        <label><input type="radio" name="q9" value="4"> Great, but it's a team effort. Let's achieve more together!</label>
+      </div>
+    </div>
+
+    <div class="question">
+      <p>10. How do you feel about working with others?</p>
+      <div class="options">
+        <label><input type="radio" name="q10" value="1"> Yikes. More people more drama.</label>
+        <label><input type="radio" name="q10" value="2"> Well, if I have to, I will. But hopefully not.</label>
+        <label><input type="radio" name="q10" value="3"> Working with other people is a great way to learn some soft skills.</label>
+        <label><input type="radio" name="q10" value="4"> Let's see what I can learn from them and how to work well together.</label>
+      </div>
+    </div>
+
 
     <button type="button" id="submit-btn">Submit</button>
   </form>
@@ -75,7 +146,7 @@
         total += parseInt(value);
       }
 
-      const answered = ["q1", "q2", "q3"].every(q => formData.has(q));
+      const answered = ["q1", "q2", "q3", "q5", "q6", "q7", "q8", "q9", "q10"].every(q => formData.has(q));
       const scoreBox = document.getElementById("score");
 
       if (answered) {
