--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
 
-  <h1>Simple Quiz</h1>
+  <h1>How it works: Pick the response that resonates most with you based on the scenarios given. Each response has a number tagged to it. Simply add all the numbers to your answers and compare them to the results chart at the end of the questionnaire!</h1>
 
   <form id="quiz-form">
     <div class="question">
