--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
   </style>
 </head>
 <body>
-
-  <h1>How it works: Pick the response that resonates most with you based on the scenarios given. Each response has a number tagged to it. Simply add all the numbers to your answers and compare them to the results chart at the end of the questionnaire!</h1>
+  <h1>Growth VS Fixed: Where Are You on the Mindset Scale? Try This Quiz to Find Out</h1>
+  <h2>How it works: Pick the response that resonates most with you based on the scenarios given. Each response has a number tagged to it. Simply add all the numbers to your answers and compare them to the results chart at the end of the questionnaire!</h2>
 
   <form id="quiz-form">
     <div class="question">
@@ -156,6 +156,7 @@
       }
     });
   </script>
+  <p>Quiz content taken from https://content.mycareersfuture.gov.sg/growth-vs-fixed-mindset-scale-quiz/</p>
 
 </body>
 </html>
