--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
       }
     });
   </script>
+  <img src="10to15pts.jpg" alt="10-15 points">
   <p>Quiz content taken from https://content.mycareersfuture.gov.sg/growth-vs-fixed-mindset-scale-quiz/</p>
 
 </body>
