--- a/index.html
+++ b/index.html
@@ -156,7 +156,12 @@
       }
     });
   </script>
+
+  <p>Here's what your result says about you:</p>
+  <img src="26to30pts.jpg" alt="26-30 points">
+  <img src="16to25pts.jpg" alt="16-25 points">
   <img src="10to15pts.jpg" alt="10-15 points">
+  
   <p>Quiz content taken from https://content.mycareersfuture.gov.sg/growth-vs-fixed-mindset-scale-quiz/</p>
 
 </body>
