--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Simple Quiz</title>
+  <title>Mindset Quiz</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -27,7 +27,7 @@
 </head>
 <body>
   <h1>Growth VS Fixed: Where Are You on the Mindset Scale? Try This Quiz to Find Out</h1>
-  <h2>How it works: Pick the response that resonates most with you based on the scenarios given. Each response has a number tagged to it. Simply add all the numbers to your answers and compare them to the results chart at the end of the questionnaire!</h2>
+  <h2>How it works: Pick the response that resonates most with you based on the scenarios given. Each response has a number tagged to it. Check the results chart at the end of the questionnaire!</h2>
 
   <form id="quiz-form">
     <div class="question">
